# Solana-social-media

./: Anchor.toml  Cargo.toml
programs/solana-social-media/: Cargo.toml
programs/solana-social-media/src/: error.rs  lib.rs
programs/solana-social-media/src/post/: instructions.rs  mod.rs  state.rs
programs/solana-social-media/src/subscription/: instructions.rs  mod.rs  state.rs
programs/solana-social-media/src/tip/: instructions.rs  state.rs
programs/solana-social-media/src/user_profile/: instructions.rs  mod.rs  state.rs
tests/: solana-social-media.ts  utils.rs
tests/post/: create_post.rs  delete_post.rs
tests/subscription/: mod.rs  subscribe.rs  unsubscribe.rs
tests/tip/: mod.rs  send_tip.rs
tests/user_profile/: create_profile.rs  mod.rs  update_profile.rs
